Add google analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/passivepoker-favicon-bigpp.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passive Poker</title>
+
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CR4KM83H9Y"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CR4KM83H9Y');
+  </script>
+
   </head>
   <body>
     <div id="root"></div>
