--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     gtag('config', 'G-CR4KM83H9Y');
   </script>
 
+  <!-- Google Adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6119082545640298"
+     crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div id="root"></div>
